convert m4a to wav in parallel

--- a/load_dataset/m4a_to_wav.ipynb
+++ b/load_dataset/m4a_to_wav.ipynb
@@ -9,7 +9,29 @@
    "source": [
     "import os\n",
     "import glob\n",
-    "from pydub import AudioSegment"
+    "from pydub import AudioSegment\n",
+    "\n",
+    "from multiprocessing import Pool, cpu_count\n",
+    "from joblib import Parallel, delayed\n",
+    "    \n",
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "from tqdm import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0faeee62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _parallelize(func, data):\n",
+    "    processes = cpu_count() - 1\n",
+    "    with Pool(processes) as pool:\n",
+    "        # We need the enclosing list statement to wait for the iterator to end\n",
+    "        # https://stackoverflow.com/a/45276885/1663506\n",
+    "        list(tqdm(pool.imap_unordered(func, data), total=len(data)))"
    ]
   },
   {
@@ -72,6 +94,33 @@
     "ext = '*.m4a'\n",
     "\n",
     "files = glob.glob(os.path.join(audio_dir,'**/'+ ext), recursive=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8825e875",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "chunks = split_list_with_N_elements(files, len(files) // N_files_core)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f370c3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_files(files):\n",
+    "    for audiofile in files:\n",
+    "        path, wav_filename = set_audio_filepath(audiofile)\n",
+    "        if not os.path.exists(path):\n",
+    "            os.makedirs(path)\n",
+    "\n",
+    "        AudioSegment.from_file(audiofile).export(wav_filename, format='wav')"
    ]
   },
   {
@@ -979,13 +1028,8 @@
     }
    ],
    "source": [
-    "                  \n",
-    "for audiofile in files:\n",
-    "    path, wav_filename = set_audio_filepath(audiofile)\n",
-    "    if not os.path.exists(path):\n",
-    "        os.makedirs(path)\n",
-    "    print(wav_filename)\n",
-    "    AudioSegment.from_file(audiofile).export(wav_filename, format='wav')"
+    "Parallel(n_jobs=-1, backend=\"threading\", verbose=2)(\n",
+    "                delayed(convert_files)(chunks[i]) for i in range(len(chunks)))              \n"
    ]
   },
   {
